Apply fixed mdx configuration to post page

--- a/src/posts/test-category1/test-content1.mdx
+++ b/src/posts/test-category1/test-content1.mdx
@@ -1,6 +1,7 @@
 ---
 title: A Longer Placeholder MDX Content with Table
-author: Bard
+category: test-category1
+slug: test-content1
 createdAt: 1702129712785
 ---
 
