--- a/src/posts/category2/cat2-3.mdx
+++ b/src/posts/category2/cat2-3.mdx
@@ -1,8 +1,8 @@
 ---
 title: A Longer Placeholder MDX Content with Table
-category: test-category1
-slug: test-content1
-createdAt: 1702129712785
+category: category2
+slug: cat2-3
+createdAt: 1702188840438
 ---
 
 # Introduction
