Change createdAt frontmatter property's name to updatedAt

--- a/src/posts/category1/cat1-1.mdx
+++ b/src/posts/category1/cat1-1.mdx
@@ -2,7 +2,7 @@
 title: A Longer Placeholder MDX Content with Table
 category: category1
 slug: cat1-1
-createdAt: 1702129712785
+updatedAt: 1702129712785
 ---
 
 # Introduction
