--- a/src/posts/category2/cat2-1.mdx
+++ b/src/posts/category2/cat2-1.mdx
@@ -2,7 +2,7 @@
 title: A Longer Placeholder MDX Content with Table
 category: category2
 slug: cat2-1
-createdAt: 1702129712785
+updatedAt: 1702129712785
 ---
 
 # Introduction
