--- a/src/posts/category2/cat2-3.mdx
+++ b/src/posts/category2/cat2-3.mdx
@@ -2,7 +2,7 @@
 title: A Longer Placeholder MDX Content with Table
 category: category2
 slug: cat2-3
-createdAt: 1702188840438
+updatedAt: 1702188840438
 ---
 
 # Introduction
