--- a/src/posts/category1/cat1-3.mdx
+++ b/src/posts/category1/cat1-3.mdx
@@ -2,7 +2,7 @@
 title: A Longer Placeholder MDX Content with Table
 category: category1
 slug: cat1-3
-createdAt: 1702188840438
+updatedAt: 1702188840438
 ---
 
 # Introduction
